# opnx-matching-engine

./: CMakeLists.txt  CONTRIBUTING.md  README.md  build_local.sh  install_dependency_linux.sh  install_dependency_mac.sh  logrotate.conf  logrotate.cron  start.sh
TriggerOrderManager/: TriggerOrderManager.cpp  TriggerOrderManager.h
engine/: engine.cpp  engine.h
include/: IEngine.h  IMessage.h  ITriggerOrder.h  common.h  global.h  implied_engine.h  implier.h  imsg_proxy.h  log.h  math.hpp  order.h  order_book_item.h  spin_mutex.hpp  thread_queue.h  threadsafe_queue.h  utils.h
manager/: CMakeLists.txt  main.cpp  manager.cpp  manager.h
pulsar_proxy/: pulsar_proxy_c.cpp  pulsar_proxy_c.h
